--- a/source/_posts/未来简史.md
+++ b/source/_posts/未来简史.md
@@ -28,7 +28,7 @@ title: 未来简史
 # 三、好吧，既然如此，这本书到底讲了些什么？
    我将从中选择几个关键性的论点并加以转述。
 ## 1. 到了二十一世纪，人类文明的中心议题是什么？
-关于这个问题，我想每个四十岁以上的中年男人都有自己的不重复的看法，其中尤以出租车司机的观点最为新锐激进。不过若采取他们的观点，你很可能认为我国在不久的将来将要武装登陆日本四岛，并以此为依据去学了核物理（当然，大家都知道，这不是来自于贵系的嘲讽，因为作者跟计算机科学与技术专业没有一点关系）。不过显然，这一命题对于个人的职业选择以及人生规划有着潜移默化但相当重要的影响。
+关于这个问题，我想每个四十岁以上的中年男人都有自己的不重复的看法，其中尤以出租车司机的观点最为新锐激进。不过若采取他们的观点，你很可能认为我国在不久的将来将要武装登陆日本四岛，并大量购入机械、军工企业的股票。不过显然，这一命题对于个人的职业选择以及人生规划有着潜移默化但相当重要的影响。
 我愿意将我的懵懂的观点与你们分享：
 
    *1 消除地球上普遍存在的贫困、不平等、饥饿、疾病现象。*
