--- a/source/_posts/Learning/にはんご/ぎおん.md
+++ b/source/_posts/Learning/にはんご/ぎおん.md
@@ -27,9 +27,11 @@
 ふらふら　adv/自动v３　　　　　1.摇晃，晃荡，蹒跚。2.犹豫不定，无目的的。3.溜达，闲逛。
 がらがら　n/adv/adj2/自动v3　1.轰隆，咯噔，物体坍塌的声音或样子。2.语言或动作直率的样子。3.人很少，很空，空荡荡。4.
 どきどき　adv/自动v3　　　　　（心）七上八下，忐忑不安。
-ずきずき　adv/自动v3　　　　　跳痛，跳疼，一跳一跳地疼。伤口或头等脉动似地连续发痛状。
-
-
+ずきずき　adv/自动v3　　　　　　跳痛，跳疼，一跳一跳地疼。伤口或头等脉动似地连续发痛状。
+ワンワン　　                （狗）汪汪（叫）
+くねくね　　　　　　　　　　　　弯曲，弯弯曲曲
+ザーザー　　　　　　　　　　　　（雨）哗啦哗啦
+やすやす　　　　　　　　　　　　香甜地，安静地
 
 
 
