--- a/source/_posts/Learning/にはんご/ぎおん.md
+++ b/source/_posts/Learning/にはんご/ぎおん.md
@@ -32,8 +32,9 @@
 くねくね　　　　　　　　　　　　弯曲，弯弯曲曲
 ザーザー　　　　　　　　　　　　（雨）哗啦哗啦
 やすやす　　　　　　　　　　　　香甜地，安静地
-
-
+とんとん　　　　　　　　　　　　1.相等；不相上下；差不多。平衡。2.扑通，嗵嗵。3.顺利，顺当。
+ざあざあ　　　　　　　　　　　　哗啦哗啦。雨猛烈降落的声音（或状态）。水剧烈流动的声音（或状态）。哗哗地（下雨、流水声）
+すらすら　　　　　　　　　　　　平滑地流利地，流畅地，顺利地，痛快地。
 
 
 
