--- a/source/_posts/Learning/にはんご/ぎおん.md
+++ b/source/_posts/Learning/にはんご/ぎおん.md
@@ -35,10 +35,12 @@
 とんとん　　　　　　　　　　　　1.相等；不相上下；差不多。平衡。2.扑通，嗵嗵。3.顺利，顺当。
 ざあざあ　　　　　　　　　　　　哗啦哗啦。雨猛烈降落的声音（或状态）。水剧烈流动的声音（或状态）。哗哗地（下雨、流水声）
 すらすら　　　　　　　　　　　　平滑地流利地，流畅地，顺利地，痛快地。
-
-
-
-
+びりびり　　　　　　　　　　　　1.哧哧。2.哗啦啦，哗哗。3.麻酥酥。
+ばりばり　　　　　　　　　　　　1.咯吱咯吱，咯哧咯哧，哗啦哗啦2.咯嘣咯嘣。3.干劲足。4.工作麻利。5.撕开的样子。
+ごちゃごちゃ　　　　　　　　　　乱糟糟，乱七八糟。
+ごくごく　　　　　　　　　　　　咕嘟咕嘟,咕噜咕噜
+ぎしぎし　　　　　　　　　　　　嘎吱嘎吱（响）
+うじゃうじゃ　　　　　　　　　　1.乱爬乱钻，密密麻麻乱动，蠕动。2.唠唠叨叨，嘟嘟囔囔。
 
 
 
