--- a/source/_posts/Learning/にはんご/ぎおん.md
+++ b/source/_posts/Learning/にはんご/ぎおん.md
@@ -41,6 +41,8 @@
 ごくごく　　　　　　　　　　　　咕嘟咕嘟,咕噜咕噜
 ぎしぎし　　　　　　　　　　　　嘎吱嘎吱（响）
 うじゃうじゃ　　　　　　　　　　1.乱爬乱钻，密密麻麻乱动，蠕动。2.唠唠叨叨，嘟嘟囔囔。
-
+ふわふわ　　　　　　　　　　　　轻飘飘，软绵绵
+ぐずぐず　　　　　　　　　　　　磨磨蹭蹭
+わくわく　　　　　　　　　　　　欢欣雀跃　
 
 
