--- a/source/_posts/Learning/にはんご/ぎおん.md
+++ b/source/_posts/Learning/にはんご/ぎおん.md
@@ -43,6 +43,27 @@
 うじゃうじゃ　　　　　　　　　　1.乱爬乱钻，密密麻麻乱动，蠕动。2.唠唠叨叨，嘟嘟囔囔。
 ふわふわ　　　　　　　　　　　　轻飘飘，软绵绵
 ぐずぐず　　　　　　　　　　　　磨磨蹭蹭
-わくわく　　　　　　　　　　　　欢欣雀跃　
-
-
+わくわく　　　　　　　　　　　　欢欣雀跃
+ニヤリ　　　　　　　　　　　　　暗笑，微笑，冷笑
+とぼとぼ　　　　　　　　　　　　步履蹒跚，有气无力
+ぶらぶら　　　　　　　　　　　　溜达，信步而行
+のろのろ　　　　　　　　　　　　迟缓，慢吞吞
+がみがみ　　　　　　　　　　　　唠唠叨叨
+ぶつぶつ　　　　　　　　　　　　嘟囔，牢骚
+じっと　　　　　　　　　　　　　保持稳定，聚精会神
+せっせと　　　　　　　　　　　　拼命地，勤勤恳恳地
+さっさと　　　　　　　　　　　　赶快地，迅速地
+ねばねば　　　　　　　　　　　　黏糊糊，发黏
+ざらざら　　　　　　　　　　　　粗糙，不光滑
+まごまご　　　　　　　　　　　　着慌，不知所措
+げっそり　　　　　　　　　　　　急剧消瘦，灰心，失望
+うっとり　　　　　　　　　　　　出神，入迷
+おどおど　　　　　　　　　　　　提心吊胆，战战兢兢
+たぼたぼ　　　　　　　　　　　　肥肥大大
+ぶかぶか　　　　　　　　　　　　肥肥大大    
+たっぷり　　　　　　　　　　　　充足地、充分地
+じろじろ　　　　　　　　　　　　盯着
+きらきら　　　　　　　　　　　　耀眼，闪耀
+ぴったり　　　　　　　　　　　　适合
+じめじめ　　　　　　　　　　　　潮湿地
+がっしり　　　　　　　　　　　　粗壮；健壮；坚实；坚固；牢固；严整；严密；紧密
