--- a/source/_posts/Learning/にはんご/ぎおん.md
+++ b/source/_posts/Learning/にはんご/ぎおん.md
@@ -1,3 +1,27 @@
+擬音語、擬態語
+两者统称为拟声词
+拟声词是对人、物、动物发出的声音进行直接模拟，拟态词则是对人、物、动物的状态、动作或者人的感觉、感情用类似拟声词的形式进行描摹。
+拟声词一般用片假名书写，拟态词虽然有的也用片假名，但是更多的用平假名书写。
+拟声词的用法：
+1）直接使用修饰动词，后面加上と修饰动词。
+さっきから知らない人がわたしの方をじろじろ見ている。
+その小学校の学生たちはみんな笑顔で、目がきらきらと輝いていた。
+
+拟态词的用法：
+1）像拟声词一样直接使用或者后面加上と修饰动词。
+2）作为名词、形容词使用，后面加上する当作动词使用
+山口さんはいつもにこにこしている。
+コンビニでほかほかの肉まんを買ってきました。いっしょに食べませんか。
+質問された時にほかのことを考えていたので、とんちんかんな答えをしてしまった。  
+
+だぶだぶ：表示衣服过于肥大的样子
+このシャツはだぶだぶだ。
+やせているので、服を買うとだぶだぶで困る。
+
+ゆったり：表示衣服宽松；不慌不忙，不紧不慢的样子
+あのう、この服小さいんですげど、もう少しゆったりしたサイズはありませんか。
+あのう、この服の襟元、もう少しゆったり作れませんか。
+
 ベラベラ／ペチャクチャ　　　　　喋喋不休，口若悬河，唠唠叨叨
 ブツブツ　　　　　　　　　　　　嘟嘟哝哝，发牢骚
 アハハ／ウフフ　　　　　　　　　啊哈哈，哦呵呵
@@ -67,3 +91,8 @@
 ぴったり　　　　　　　　　　　　适合
 じめじめ　　　　　　　　　　　　潮湿地
 がっしり　　　　　　　　　　　　粗壮；健壮；坚实；坚固；牢固；严整；严密；紧密
+ふっくら　　　　　　　　　　　　蓬松　
+はるばる　　　　　　　　　　　　遥远，远道而来
+そこそこ　　　　　　　　　　　　大约在可接受的范围内，还算可以；草草了事；接在数量词表示数量顶多，不过如此，有轻蔑的语气
+くれぐれも　　　　　　　　　　　反复，周到，仔细。通常用于请求的语气中。くれぐれもお体を大切になさってください。くれぐれも息子をよろしくお願いいたします。　
+ほかほか　　　　　　　　　　　　热乎，热腾腾。
