--- a/source/_posts/Learning/にはんご/ぎおん.md
+++ b/source/_posts/Learning/にはんご/ぎおん.md
@@ -81,7 +81,7 @@
 ざらざら　　　　　　　　　　　　粗糙，不光滑
 まごまご　　　　　　　　　　　　着慌，不知所措
 げっそり　　　　　　　　　　　　急剧消瘦，灰心，失望
-うっとり　　　　　　　　　　　　出神，入迷
+うっとり　　　　　　　　　　　　出神，入迷，陶醉
 おどおど　　　　　　　　　　　　提心吊胆，战战兢兢
 たぼたぼ　　　　　　　　　　　　肥肥大大
 ぶかぶか　　　　　　　　　　　　肥肥大大    
