--- a/source/_posts/Learning/にはんご/ぎおん.md
+++ b/source/_posts/Learning/にはんご/ぎおん.md
@@ -96,3 +96,4 @@
 そこそこ　　　　　　　　　　　　大约在可接受的范围内，还算可以；草草了事；接在数量词表示数量顶多，不过如此，有轻蔑的语气
 くれぐれも　　　　　　　　　　　反复，周到，仔细。通常用于请求的语气中。くれぐれもお体を大切になさってください。くれぐれも息子をよろしくお願いいたします。　
 ほかほか　　　　　　　　　　　　热乎，热腾腾。
+そわそわ　　　　　　　　　　　　慌张，心神不定，坐立难安
